hphp/hack/test/extended_reasons/complex/workplace_abstract_class_as_typeconst.php.exp
error: Typing[4110] Invalid argument

 36 |   $ak = new ExampleArraykeyClass();
 37 |   $ak->addToContainer(»1«);
 38 | }

File "workplace_abstract_class_as_typeconst.php", line 37, character 23 - line 37, character 23:

Expected `ContainerClass::TType`

 13 |   public function addToContainer(»this::TContainerClass::TType« $val): void {
 14 |     $this->container?->add($val);
 15 |   }

File "workplace_abstract_class_as_typeconst.php", line 13, character 34 - line 13, character 61:

But got `int`

 36 |   $ak = new ExampleArraykeyClass();
 37 |   $ak->addToContainer(»1«);
 38 | }

File "workplace_abstract_class_as_typeconst.php", line 37, character 23 - line 37, character 23:

This error has 3 steps, a maximum depth of 1 and contains 1 reversal.

Here's why: this expression

 36 |   $ak = new ExampleArraykeyClass();
 37 |   $ak->addToContainer(»1«);
 38 | }

File "workplace_abstract_class_as_typeconst.php", line 37, character 23 - line 37, character 23:

flows up into this expression as the 1st function parameter

 36 |   $ak = new ExampleArraykeyClass();
 37 |   »$ak->addToContainer(1)«;
 38 | }

File "workplace_abstract_class_as_typeconst.php", line 37, character 3 - line 37, character 24:

which itself flows from this function or method  because they are required to be subtypes

 13 |   public function »addToContainer«(this::TContainerClass::TType $val): void {
 14 |     $this->container?->add($val);
 15 |   }

File "workplace_abstract_class_as_typeconst.php", line 13, character 19 - line 13, character 32:

which itself flows down into this type constant as the 1st function parameter

 13 |   public function addToContainer(this::TContainerClass::»TType« $val): void {
 14 |     $this->container?->add($val);
 15 |   }

File "workplace_abstract_class_as_typeconst.php", line 13, character 57 - line 13, character 61:

1 error found.
